--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,8 @@
 		</div>
 		<div>
 			<h3><a th:href="@{/register}">Register</a></h3>
+			<h3><a th:href="@{/login}">Login</a></h3>
+			<h3><a th:href="@{/list_users}">View All Users</a></h3>
 		</div>
 		
 	</div>
