--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container text-center">
 		<div>
-			<form action="@{logout}" method="post">
+			<form th:action="@{/logout}" method="post">
 				<p>
 				    Welcome <b th:text="${fullName}"></b>
 				</p>
