validate, fetch register api

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,19 +3,116 @@
 	xmlns:th="https://www.thymeleaf.org">
 <head>
 	<title>Please Log In</title>
+	<link rel="stylesheet" type="text/css"
+		href="/webjars/bootstrap/css/bootstrap.min.css" />
+	<script src="https://kit.fontawesome.com/3858995198.js"
+		crossorigin="anonymous"></script>
 </head>
 <body>
-	<h1>Please Log In</h1>
-	<div th:if="${param.error}">Invalid username and password.</div>
-	<div th:if="${param.logout}">You have been logged out.</div>
-	<form th:action="@{/login}" method="post">
-		<div>
-			<input type="text" name="email" placeholder="Username" />
+	<div class="container text-center">
+		<h1>Please Log In</h1>
+
+		<div th:if="${param.error}"
+			class="alert alert-danger alert-dismissible"
+			style="max-width: 600px; margin: 0 auto">
+			Invalid username or password.
+			<button type="button" class="close" data-dismiss="alert"
+				aria-label="Close" onclick="closeAlert(this)">
+				<span aria-hidden="true">&times;</span>
+			</button>
 		</div>
-		<div>
-			<input type="password" name="password" placeholder="Password" />
+
+		<div th:if="${param.logout}"
+			class="alert alert-warning alert-dismissible"
+			style="max-width: 600px; margin: 0 auto">
+			You have been logged out.
+			<button type="button" class="close" data-dismiss="alert"
+				aria-label="Close" onclick="closeAlert(this)">
+				<span aria-hidden="true">&times;</span>
+			</button>
 		</div>
-		<input type="submit" value="Log in" />
-	</form>
+
+		<div th:if="${param.registered}"
+			class="alert alert-primary alert-dismissible"
+			style="max-width: 600px; margin: 0 auto">
+			You have successully registered your account. Please login first
+			<button type="button" class="close" data-dismiss="alert"
+				aria-label="Close" onclick="closeAlert(this)">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+
+		<form th:action="@{/login}" method="post" id="login-form"
+			onsubmit="return validateLoginForm()"
+			style="max-width: 600px; margin: 0 auto; margin-top: 2rem">
+			<div>
+				<div class="form-group row">
+					<label class="col-form-label col-4">Username</label>
+					<div class="col-8">
+						<div class="email-error text-danger"></div>
+						<input type="email" name="email" placeholder="Email"
+							class="form-control" required="required" />
+					</div>
+				</div>
+				<div class="form-group row">
+					<label class="col-form-label col-4">Password</label>
+					<div class="col-8">
+						<div class="password-error text-danger"></div>
+						<input type="password" name="password" placeholder="Password"
+							class="form-control" required="required" id="password" /> <i
+							class="fa fa-eye-slash eye-icon" onclick="hideAndShowPass()"
+							aria-hidden="true"
+							style="position: absolute; top: 50%; right: 20px; 
+							transform: translateY(-50%); cursor: pointer;"></i>
+					</div>
+				</div>
+				<div>
+					<button type="submit" class="btn btn-primary">Log in</button>
+				</div>
+			</div>
+		</form>
+
+		<div class="row"
+			style="max-width: 600px; margin: 0 auto; margin-top: 1rem">
+			<div class="col-12">
+				<div
+					class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
+					<p class="m-0 text-secondary text-center">
+						Don't have an account? <a href="/register"
+							class="link-primary text-decoration-none">Register</a>
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row"
+			style="max-width: 600px; margin: 0 auto; margin-top: 1rem">
+			<div class="col-12">
+				<div
+					class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
+					<p class="m-0 text-secondary text-center">
+						OR CONTINUE WITH 
+						<a th:href="@{/oauth2/authorization/google}"
+							class="btn btn-outline-danger bsb-btn-circle bsb-btn-circle-2xl"
+							style="margin: 0 20px">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+								fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
+								<path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z" />
+							</svg>
+						</a>
+						<a th:href="@{/oauth2/authorization/facebook}"
+						   class="btn btn-outline-primary bsb-btn-circle bsb-btn-circle-2xl">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+								fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+								<path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+							</svg>
+						</a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script type="text/javascript" th:src="@{js/login.js}"></script>
 </body>
 </html>
