add roles, authorization

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -65,6 +65,19 @@
 				<div
 					class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
 					<p class="m-0 text-secondary text-center">
+						Have an account? <a href="/register"
+							class="link-primary text-decoration-none">Login</a>
+					</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="row"
+			style="max-width: 600px; margin: 0 auto; margin-top: 1rem">
+			<div class="col-12">
+				<div
+					class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
+					<p class="m-0 text-secondary text-center">
 						OR CONTINUE WITH 
 						<a th:href="@{/oauth2/authorization/google}"
 							class="btn btn-outline-danger bsb-btn-circle bsb-btn-circle-2xl"
