--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,8 +42,7 @@
 			</button>
 		</div>
 
-		<form th:action="@{/login}" method="post" id="login-form"
-			onsubmit="return validateLoginForm()"
+		<form th:action="@{/login}" method="post"
 			style="max-width: 600px; margin: 0 auto; margin-top: 2rem">
 			<div>
 				<div class="form-group row">
