add reset password

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -65,7 +65,7 @@
 				<div
 					class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
 					<p class="m-0 text-secondary text-center">
-						Have an account? <a href="/register"
+						Have an account? <a href="/login"
 							class="link-primary text-decoration-none">Login</a>
 					</p>
 				</div>
