--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -73,7 +73,16 @@
 
 		<div class="row"
 			style="max-width: 600px; margin: 0 auto; margin-top: 1rem">
-			<div class="col-12">
+			<div class="col-6">
+				<div
+					class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
+					<p class="m-0 text-secondary text-center">
+						Forgot <a href="/forgot_password"
+							class="link-primary text-decoration-none">password?</a>
+					</p>
+				</div>
+			</div>
+			<div class="col-6">
 				<div
 					class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
 					<p class="m-0 text-secondary text-center">
